Django Back-end updates
Migrated DB into PostgreSQL.
Created Model for Admin site to add new coffee to the database and to upload an image.

--- a/coffeepi/console/static/css/coffeepi.css
+++ b/coffeepi/console/static/css/coffeepi.css
@@ -18,12 +18,15 @@ body {
 
 h3 {
     color: white;
+    text-align: center;
 }
 
-.center-div-v{
+.center-div-v {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .coffee-image{
