--- a/coffeepi/console/templates/base.html
+++ b/coffeepi/console/templates/base.html
@@ -2,76 +2,67 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portal used to display the coffee brewed.">
-    <meta name="author" content="Justin Cole">
-    <title>{% block title %}CoffeePi{% endblock %}</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Portal used to display the coffee brewed.">
+        <meta name="author" content="Justin Cole">
+        <title>{% block title %}CoffeePi{% endblock %}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/coffeepi.css' %}" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/coffeepi.css' %}" rel="stylesheet">
+        <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+
     </head>
     
     <body>
-        <div class="container-fluid">
-            <div class="row flex-nowrap">
-                
-                <!-- New Sidebar -->
-                <div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-                    <a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
-                      <span class="fs-5 d-none d-sm-inline"> <img src="{% static 'img/logo.png' %}" alt="CoffeePi Logo">
-                    </a>
-                    <ul class="list-unstyled ps-0">
-                    {% for brand in brand_view %}
-                    <li class="mb-1">
-                        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-                            {{ brand }}
-                        </button>
-                        <div class="collapse" id="home-collapse">
-                          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="#" class="link-dark rounded">Overview</a></li>
-                            <li><a href="#" class="link-dark rounded">Updates</a></li>
-                            <li><a href="#" class="link-dark rounded">Reports</a></li>
-                          </ul>
-                        </div>
-                      </li>
-                      {% endfor %}
-                      <!-- <li class="border-top my-3"></li> -->
-                    </ul>
-                    <div>
-                        <a href="admin/" <button class="btn btn-danger" style="width:100%"> Admin </button> </a>
-                    </div>
-                </div>
-
-                <!-- Old Sidebar -->
-                <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-light">
-                    <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                        <a href="" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                            <span class="fs-5 d-none d-sm-inline"> <img src="{% static 'img/logo.png' %}" alt="CoffeePi Logo">
-                        </a>
-                        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                            <li class="nav-item">
-                                <a href="" class="nav-link align-middle px-0">
-                                    <span class="ms-1 d-none d-sm-inline">
-                                        {% for brand in brand_view %}
-                                            <li>{{ brand }}</li>
-                                        {% endfor %}
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                        <hr>
-                        <a href="admin/" <button class="btn btn-danger" style="width:100%"> Admin </button> </a>
-                    </div>
-                <div class="col py-3 center-div-v">
-                    {% block content %} {% endblock %}
-                </div>
+        <header class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
+            <a class="col-md-3 col-lg-2 me-0 px-3" href="/"><img src="{% static 'img/logo.png' %}" alt="CoffeePi Logo"></a>
+            <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="center-div-v">
+                <p>But first, coffee.</p>
             </div>
+            <div class="navbar-nav">
+              <div class="nav-item text-nowrap">
+                <a class="nav-link px-3" href="admin/">Admin</a>
+              </div>
+            </div>
+          </header>
+          
+        <div class="container-fluid">
+            <div class="row">
+                <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                    <div class="position-sticky pt-3">
+                        <h3 class="nav-header-blk">Brands</h3>
+                        <ul class="nav flex-column">
+                            {% for brand in brand_view %}
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="#">
+                                        {{ brand }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </nav>
+          
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom center-div-v">
+                    <h3 class="coffee-w-c">Select the brewed coffee</h3>
+                        <div class="btn-toolbar mb-2 mb-md-0">
+                        </div>
+                </div>
+                <div class="center-div-v">
+                    {% block card %}{% endblock %}
+                </div>
+            </main>
         </div>
-        
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>  
+        </div>
+
+        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     </body>
 
 </html>
