--- a/coffeepi/console/templates/base.html
+++ b/coffeepi/console/templates/base.html
@@ -53,13 +53,11 @@
                 </nav>                
           
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom center-div-v">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 center-div-v">
                     <h3 class="coffee-w-c">Select the brewed coffee</h3>
-                    <div class="btn-toolbar mb-2 mb-md-0">
+                    <div class="center-div-v" id="coffeeList">
+                        <!-- Coffee types will be populated here -->
                     </div>
-                </div>
-                <div class="center-div-v" id="coffeeList">
-                    <!-- Coffee types will be populated here -->
                 </div>
             </main>
             
